started to change fluent structure to prevent Validation Errors of UsageModel, marked old methods as Deprecated for now